Change library to library-laravel

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "subangkit/fcmable",
     "description": "Laravel Package to Integrate Model and FCM",
-    "type": "library laravel",
+    "type": "library-laravel",
     "require": {
         "brozot/laravel-fcm": "1.2.*"
     },
